Hiding lang selector when header is visible.  This prevents the overlap from the title from being evident.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3306,7 +3306,7 @@
 		}
 
 		#header .lang-select {
-			height: 1.75em;
+			display: none;
 		}
 
 			#header nav > ul {
@@ -3373,6 +3373,11 @@
 
 		#header.alt {
 			background: transparent;
+		}
+
+		#header.alt .lang-select {
+			display: block;
+			height: 1.75em;
 		}
 
 			#header.alt h1 {
